@@ -15,18 +15,20 @@ import net.minecraft.world.inventory.AbstractContainerMenu;
 import net.minecraft.world.inventory.ContainerLevelAccess;
 import net.minecraft.world.inventory.Slot;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.RecipeHolder;
 import net.minecraft.world.level.Level;
-import net.minecraftforge.items.IItemHandler;
-import net.minecraftforge.items.ItemStackHandler;
-import net.minecraftforge.items.SlotItemHandler;
-import net.minecraftforge.items.wrapper.InvWrapper;
+import net.neoforged.neoforge.items.IItemHandler;
+import net.neoforged.neoforge.items.ItemStackHandler;
+import net.neoforged.neoforge.items.SlotItemHandler;
+import net.neoforged.neoforge.items.wrapper.InvWrapper;
+import net.neoforged.neoforge.items.wrapper.RecipeWrapper;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nonnull;
 import java.util.List;
 import java.util.function.Predicate;
 
-public class ChiselTableMenu extends AbstractContainerMenu{
+public class ChiselTableMenu extends AbstractContainerMenu {
 
     public static final int SLOT_MATERIAL = 0;
     public static final int SLOT_TEMPLATE = 1;
@@ -48,7 +50,7 @@ public class ChiselTableMenu extends AbstractContainerMenu{
     private final ItemStackHandler result = new ItemStackHandler(1);
     private final IItemHandler inventory;
 
-    public ChiselTableMenu(int id, Inventory inventory){
+    public ChiselTableMenu(int id, Inventory inventory) {
         this(id, inventory, ContainerLevelAccess.NULL);
     }
 
@@ -60,25 +62,25 @@ public class ChiselTableMenu extends AbstractContainerMenu{
 
         this.addSlot(new MaterialSlot(crafting, SLOT_MATERIAL, 26, 25));
         this.addSlot(new TemplateSlot(crafting, SLOT_TEMPLATE, 53, 25));
-        for (int i = SLOT_COLOR_START, j = 0; i < SLOT_COLOR_END; i++, j++){
-            this.addSlot(new DyeSlot(crafting, i, 26 + j * 18,52));
+        for (int i = SLOT_COLOR_START, j = 0; i < SLOT_COLOR_END; i++, j++) {
+            this.addSlot(new DyeSlot(crafting, i, 26 + j * 18, 52));
         }
         this.addSlot(new OutputSlot(result, 0, 130, 34));
 
-        for(int r = 0; r < 3; ++r) {
-            for(int c = 0; c < 9; ++c) {
+        for (int r = 0; r < 3; ++r) {
+            for (int c = 0; c < 9; ++c) {
                 this.addSlot(new SlotItemHandler(this.inventory, c + r * 9 + 9, 8 + c * 18, 84 + r * 18));
             }
         }
 
-        for(int k = 0; k < 9; ++k) {
+        for (int k = 0; k < 9; ++k) {
             this.addSlot(new SlotItemHandler(this.inventory, k, 8 + k * 18, 142));
         }
     }
 
     public void slotsChanged(SlotItemHandler slot) {
         this.broadcastChanges();
-        if (slot.getSlotIndex() <= SLOT_RESULT){
+        if (slot.getSlotIndex() <= SLOT_RESULT) {
             this.createResult();
         }
     }
@@ -86,22 +88,23 @@ public class ChiselTableMenu extends AbstractContainerMenu{
     public void createResult() {
         Level level = player.level();
         Container ingredients = this.wrapIngredients();
-        List<ChiselTableRecipe> list = level.getRecipeManager().getRecipesFor(RecipeTypeRegistry.CHISEL_TABLE.get(), ingredients, level);
-        if (list.size() > 1){
+        RecipeWrapper wrapper = new RecipeWrapper(new InvWrapper(ingredients));
+        List<RecipeHolder<ChiselTableRecipe>> list = level.getRecipeManager().getRecipesFor(RecipeTypeRegistry.CHISEL_TABLE.get(), wrapper, level);
+        if (list.size() > 1) {
             Ultramarine.getLogger().warn("Duplicate chisel table recipe: ");
-            list.forEach(recipe -> Ultramarine.getLogger().warn(recipe.getId().getPath()));
+            list.forEach(recipe -> Ultramarine.getLogger().warn(recipe.id().toString()));
         }
         if (list.isEmpty()) {
             this.result.setStackInSlot(0, ItemStack.EMPTY);
         } else {
-            ChiselTableRecipe recipe = list.get(0);
-            ItemStack resultItemStack = recipe.assemble(ingredients, level.registryAccess());
+            ChiselTableRecipe recipe = list.getFirst().value();
+            ItemStack resultItemStack = recipe.assemble(wrapper, level.registryAccess());
             this.result.setStackInSlot(0, resultItemStack);
         }
     }
 
-    protected void onTake(Player player, ItemStack itemStack, SlotItemHandler slot){
-        for (int i = 0; i < SLOT_COLOR_END; i++){
+    protected void onTake(Player player, ItemStack itemStack, SlotItemHandler slot) {
+        for (int i = 0; i < SLOT_COLOR_END; i++) {
             ItemStack item = crafting.getStackInSlot(i);
             crafting.setStackInSlot(i, item);
             if (i != SLOT_TEMPLATE)
@@ -125,15 +128,15 @@ public class ChiselTableMenu extends AbstractContainerMenu{
                 }
                 slot.onQuickCraft(slotItem, itemstack);
             } else if (pIndex > SLOT_RESULT) { // inv slots
-                if (IS_WOOD.test(slotItem)){
+                if (IS_WOOD.test(slotItem)) {
                     if (!this.moveItemStackTo(slotItem, SLOT_MATERIAL, SLOT_MATERIAL + 1, false)) {
                         return ItemStack.EMPTY;
                     }
-                } else if (IS_TEMPLATE.test(slotItem)){
+                } else if (IS_TEMPLATE.test(slotItem)) {
                     if (!this.moveItemStackTo(slotItem, SLOT_TEMPLATE, SLOT_TEMPLATE + 1, false)) {
                         return ItemStack.EMPTY;
                     }
-                } else if (IS_COLOR.test(slotItem)){
+                } else if (IS_COLOR.test(slotItem)) {
                     if (!this.moveItemStackTo(slotItem, SLOT_COLOR_START, SLOT_COLOR_END, false)) {
                         return ItemStack.EMPTY;
                     }
@@ -164,7 +167,7 @@ public class ChiselTableMenu extends AbstractContainerMenu{
     }
 
     public boolean canTakeItemForPickAll(ItemStack pStack, Slot pSlot) {
-        return ((SlotItemHandler)pSlot).getItemHandler() != this.result && super.canTakeItemForPickAll(pStack, pSlot);
+        return ((SlotItemHandler) pSlot).getItemHandler() != this.result && super.canTakeItemForPickAll(pStack, pSlot);
     }
 
     public void removed(Player pPlayer) {
@@ -172,9 +175,9 @@ public class ChiselTableMenu extends AbstractContainerMenu{
         this.access.execute((level, blockPos) -> this.clearContainer(pPlayer, this.wrapIngredients()));
     }
 
-    private Container wrapIngredients(){
+    private Container wrapIngredients() {
         var container = new SimpleContainer(6);
-        for (int i = 0; i < 6; i++){
+        for (int i = 0; i < 6; i++) {
             container.setItem(i, this.crafting.getStackInSlot(i));
         }
         return container;
@@ -217,7 +220,7 @@ public class ChiselTableMenu extends AbstractContainerMenu{
         }
     }
 
-    class IngredientSlot extends SlotItemHandler{
+    class IngredientSlot extends SlotItemHandler {
 
         public IngredientSlot(IItemHandler itemHandler, int index, int xPosition, int yPosition) {
             super(itemHandler, index, xPosition, yPosition);
